<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">GithubUser</string>
    <string name="exp_username" translatable="false">Nama Pengguna</string>
    <string name="exp_name" translatable="false">Nama</string>
    <string name="exp_location" translatable="false">Lokasi</string>
    <string name="exp_type" translatable="false">Tipe</string>
    <string name="exp_publicRepos" translatable="false">0</string>
    <string name="exp_followers" translatable="false">1</string>
    <string name="exp_following" translatable="false">2</string>
    <string name="public_repos">Penyimpanan</string>
    <string name="followers">Pengikut</string>
    <string name="exp_company">Perusahaan</string>
    <string name="following">Mengikuti</string>
    <string name="search_hint">Cari Pengguna</string>
    <string name="not_found">Pegguna Tidak Dapat Ditemukan</string>
    <string name="not_have">%1$s Tidak Memiliki %2$s</string>
    <string name="language_settings">Ubah Bahasa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>